--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -8,7 +8,7 @@
   }
 
   .footer-copyright {
-    @apply mb-2 text-base font-semibold text-slate-500 md:text-lg dark:text-slate-400;
+    @apply mb-2 text-body font-semibold text-slate-500 dark:text-slate-400;
   }
 
   .footer-description {
